# daisy-tools

./: .gitignore  CHANGELOG.md  README.md  daisy_renamer.py  pyproject.toml  requirements.txt
daisy_renamer/: __init__.py  __main__.py  daisy_renamer.py
tests/: test_renamer.py
tests/resources/: master.smil  test0001.smil  test0002.smil  test0003.smil  test_no_audio.smil
