[tool.poetry]
name = "daisy-renamer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "daisy_renamer"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.2"
nuitka = "^1.3.8"
ordered-set = "^4.1.0"
zstandard = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
